--- a/jenkins-config.yaml
+++ b/jenkins-config.yaml
@@ -55,9 +55,9 @@ jenkins:
         - hostPathVolume:
             hostPath: "/usr/bin/docker"
             mountPath: "/usr/bin/docker"
-        - hostPathVolume:
-            hostPath: "/var/run/docker.sock"
-            mountPath: "/var/run/docker.sock"
+#        - hostPathVolume:
+#            hostPath: "/var/run/docker.sock"
+#            mountPath: "/var/run/docker.sock"
         yamlMergeStrategy: "override"
   crumbIssuer:
     standard:
